# continuum

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  sync-to-hf-space.yml
agents/: correlation_agent.py  memory_agent.py  orchestrator.py  query_agent.py  remediation_agent.py
api/: main.py
data/synthetic/: alert_stream.jsonl  incidents_seed.jsonl
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO_READINESS_CHECKLIST.md  DEMO_RUNBOOK.md  DEPLOY.md  DEVPOST.md  SUBMISSION.md  continuum-DEPLOY.md
docs/adr/: 001-dual-memory-model.md  002-stateless-lambda-recovery.md  003-mcp-readonly-queries.md  004-ccloud-cli-audit-role.md  005-synthetic-incident-data.md  006-scope-cuts.md  007-eu-central-1-region.md  008-bedrock-region-split.md  009-step-execution-semantics.md
infra/: lambda_handler.py  schema.sql  template.yaml
observability/: structured_logger.py
scripts/: benchmark.py  capture_seed_embeddings.py  chaos_demo.ps1  chaos_kill.py  demo_run.py  generate_synthetic_incidents.py  migrate_and_seed.ps1  probe_bedrock.py  seed_memory.py  synthetic_vectors.py
tests/integration/: conftest.py  test_chaos_kill_e2e.py  test_recovery_e2e.py
tests/unit/: test_api.py  test_correlation_agent.py  test_memory_agent.py  test_orchestrator_recovery.py  test_query_agent.py  test_remediation_agent.py  test_structured_logger.py
ui/: app.py
